tdf#102922: Password fields should use u2022 as masking character instead of *

Change-Id: If4f8077de953a0756967d180b8e463eb5fd7dcec
Reviewed-on: https://gerrit.libreoffice.org/29532
Tested-by: Jenkins <ci@libreoffice.org>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>